solc_noopt_ossfuzz_seed_corpus/test_sol/test_005b6e4d62e49c3d9b0219c456efcd218fb6aa1409f29ec4ecff7d70b8659ca1_test2_sol.sol
==== Source: s1.sol ====
function f() pure returns (uint) { return 1337; }
contract C {
  function g() public pure returns (uint) {
return f();
  }
}
==== Source: s2.sol ====
import "s1.sol";
function f() pure returns (uint) { return 1; }
contract D is C {
  function h() public pure returns (uint) {
return g();
  }
}
// ----
// DeclarationError 1686: (s2.sol:17-63): Function with same name and parameter types defined twice.
